# cpp-misctools

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  LICENSE  Makefile.am  README  c++-misctools-config.in  c++-misctools.pc.in  configure.ac  coverage  cpp-misctools-config.in  cpp-misctools.pc.in
cmake/Modules/: FindCPPUNIT.cmake  FindLIBB64.cmake  FindPCRECPP.cmake
src/: CMakeLists.txt  Makefile.am  c++-exceptions.h  c++-getopt.cc  c++-getopt.h  c++-getopt.hxx  c++-misctools.h.in  c++-string.cc  c++-string.h  cppmt-encoding.cc  cppmt-encoding.h  cppmt-endianness.cc  cppmt-endianness.h  cppmt-env.cc  cppmt-env.h  cppmt-env.hxx  cppmt-exceptions.h  cppmt-getopt.cc  cppmt-getopt.h  cppmt-getopt.hxx  cppmt-misctools.h.in  cppmt-sqlite-cell_t.cc  cppmt-sqlite-main.cc  cppmt-sqlite-result_t.cc  cppmt-sqlite-row_t.cc  cppmt-sqlite.h  cppmt-sqlite.hxx  cppmt-string.cc  cppmt-string.h  cppmt-zlib.cc  cppmt-zlib.h  cppmt-zlib.hxx
tests/: CMakeLists.txt  Makefile.am  cpptTest-encoding.cc  cpptTest-encoding.h  cpptTest-endianness.cc  cpptTest-endianness.h  cpptTest-getenv.cc  cpptTest-getenv.h  cpptTest-getopt.cc  cpptTest-getopt.h  cpptTest-sqlite.cc  cpptTest-sqlite.h  cpptTest-string.cc  cpptTest-string.h  cpptTest-zlib.cc  cpptTest-zlib.h  cpptTest.cc  tests_01.getopt.cfg  tests_02.getopt.cfg
